k8s/vault-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-app
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-app
  template:
    metadata:
      labels:
        app: vault-app
    spec:
      serviceAccountName: myapp-sa
      containers:
        - name: app
          image: alpine:3.19
          command: ["/bin/sh"]
          args:
            - "-c"
            - |
             apk add --no-cache curl jq;
             export VAULT_ADDR=http://vault.monitoring.svc.cluster.local:8200;
             TOKEN=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token);
             echo "SA Token: $TOKEN" | head -c 50; echo "...";  # показать часть токена
             LOGIN=$(curl -s -X POST -d '{"jwt":"'"$TOKEN"'","role":"myapp-role"}' $VAULT_ADDR/v1/auth/kubernetes/login);
             echo "Vault login response: $LOGIN";
             CLIENT_TOKEN=$(echo $LOGIN | jq -r .auth.client_token);
             echo "Vault Token: $CLIENT_TOKEN";
             curl -s -H "X-Vault-Token: $CLIENT_TOKEN" $VAULT_ADDR/v1/secret/data/test | jq -r .data.data;
             sleep 3600;
