k8s/nginx-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-exporter
  template:
    metadata:
      labels:
        app: nginx-exporter
    spec:
      containers:
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:0.11.0
          args:
            - -nginx.scrape-uri=http://nginx-service.monitoring.svc.cluster.local:80/stub_status
          ports:
            - name: metrics
              containerPort: 9113
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
  namespace: monitoring
spec:
  selector:
    app: nginx-exporter
  ports:
    - name: http
      port: 9113
      targetPort: metrics
