k8s/vault-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.15.2
          args:
            - "server"
          ports:
            - containerPort: 8200
          securityContext:
            capabilities:
              add: ["IPC_LOCK"]
          volumeMounts:
            - name: vault-storage
              mountPath: /vault/data
      volumes:
        - name: vault-storage
          persistentVolumeClaim:
            claimName: vault-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 8200
      targetPort: 8200
      nodePort: 30200
  selector:
    app: vault
